Changing all escapestudios to Snappit :)

--- a/composer.json
+++ b/composer.json
@@ -1,18 +1,18 @@
 {
-    "name": "escapestudios/symfony2-coding-standard",
+    "name": "snappit/symfony2-coding-standard",
     "type": "coding-standard",
     "description": "CodeSniffer ruleset for the Symfony2 coding standard",
     "keywords": ["Symfony2", "coding standard", "phpcs"],
-    "homepage": "https://github.com/escapestudios/Symfony2-coding-standard",
+    "homepage": "https://github.com/Snappit/Symfony2-coding-standard",
     "license": "MIT",
     "authors": [
         {
             "name": "David Joos",
-            "email": "david.joos@escapestudios.com"
+            "email": "david.joos@snappit.com"
         },
         {
             "name": "Community contributors",
-            "homepage": "https://github.com/escapestudios/Symfony2-coding-standard/graphs/contributors"
+            "homepage": "https://github.com/Snappit/Symfony2-coding-standard/graphs/contributors"
         }
     ],
     "extra": {
@@ -22,8 +22,8 @@
     },
     "minimum-stability": "dev",
     "support" : {
-        "source": "https://github.com/escapestudios/Symfony2-coding-standard",
-        "issues": "https://github.com/escapestudios/Symfony2-coding-standard/issues"
+        "source": "https://github.com/Snappit/Symfony2-coding-standard",
+        "issues": "https://github.com/Snappit/Symfony2-coding-standard/issues"
     },
     "require": {
         "squizlabs/php_codesniffer": "~2.0"
